# Cpp-Labs

./: .gitignore  .gitmodules  README.md
Lab1/: CMakeLists.txt  Dna.h  Rna.h  main.cpp  rna.cpp  rna.h  tests.cpp
Lab1-Rna/: CMakeLists.txt  README.md
Lab1-Rna/src/: rna.h
Lab1-Rna/tests/: test.cpp
Lab2-Life/: CMakeLists.txt  README.md
Lab2-Life/src/: console.cpp  console.h  field.cpp  field.h  main.cpp  variables.h
Lab2-Life/src/examples/: gosper-glider-gun.txt  pulsar.txt  simkin-glider-gun.txt
Lab2-Life/tests/: test.cpp
Lab3-Robots/: CmakeLists.txt  README.md
Lab3-Robots/data/: map_generator.py  map_test.txt
Lab3-Robots/src/: main.cpp
Lab3-Robots/src/algorithms/: a_star_search.cpp  a_star_search.h  dijkstra.cpp  dijkstra.h
Lab3-Robots/src/commands/: AbstractCommand.h  SetModeCommand.cpp  SetModeCommand.h  SetRobotCommand.cpp  SetRobotCommand.h  ToggleSapperCommand.cpp  ToggleSapperCommand.h
Lab3-Robots/src/game/: Game.cpp  Game.h
Lab3-Robots/src/map/: Map.cpp  Map.h
Lab3-Robots/src/modes/: AbstractMode.cpp  AbstractMode.h  AutoMode.cpp  AutoMode.h  ManualMode.cpp  ManualMode.h  ScanMode.cpp  ScanMode.h
Lab3-Robots/src/robots/: AbstractRobot.cpp  AbstractRobot.h  Collector.cpp  Collector.h  Sapper.cpp  Sapper.h
Lab3-Robots/src/utils/: convert_functions.cpp  convert_functions.h  exceptions.h  utils_functions.cpp  utils_functions.h
Lab3-Robots/src/variables/: global.cpp  global.h
Lab4-Csv-Parser/: CMakeLists.txt  README.md
Lab4-Csv-Parser/data/: file1.csv  file2.csv  file3.csv
Lab4-Csv-Parser/src/: main.cpp
(+12 files in other folders)
